refactor: Rename project to YTWSE Document Management System
Updates project name across package.json, index.html, metadata.json, and UI components to reflect the new application branding.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DocuMind Pro - AI DMS</title>
+    <title>YTWSE Document Management System</title>
     <link rel="manifest" href="metadata.json">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
